--- a/src/ContactApp/ObjectFactory/ObjectFactory.csproj
+++ b/src/ContactApp/ObjectFactory/ObjectFactory.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataModel\DataModel.csproj" />
     <ProjectReference Include="..\LinqToXmlUtility\LinqToXmlUtility.csproj" />
+    <ProjectReference Include="..\SqlUtility\SqlUtility.csproj" />
   </ItemGroup>
 
 </Project>
